[build] use standard for linting

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,50 +1,27 @@
+# https://evilmartians.com/chronicles/rubocoping-with-legacy-bring-your-ruby-code-up-to-standard
+
 require:
-  - rubocop-rspec
-  - rubocop-rake
+  - standard
   - rubocop-performance
+  - rubocop-rails
+  - rubocop-rake
+  - rubocop-rspec
+
+# Use the defaults from https://github.com/testdouble/standard.
+inherit_gem:
+  standard: config/ruby-3.0.yml
+
+inherit_from:
+  - .rubocop_local.yml
 
 AllCops:
-  NewCops: enable
   TargetRubyVersion: 3.0
+  DefaultFormatter: progress
+  DisplayCopNames: true
+  DisplayStyleGuide: true
+  NewCops: enable
   UseCache: true
   CacheRootDirectory: .
   MaxFilesInCache: 10000
-
-Metrics/BlockLength:
-  Description: allow features to be more descriptive and longer
   Exclude:
-    - "spec/**/*"
-
-RSpec/ExampleLength:
-  Description: allow features to be more descriptive and longer
-  Exclude:
-    - "spec/**/*"
-
-RSpec/InstanceVariable:
-  Exclude:
-    - "spec/views/**/*"
-
-RSpec/MultipleExpectations:
-  Max: 5
-  Description: allow features to be more descriptive and longer
-  Exclude:
-    - "spec/features/**/*"
-
-Style/Documentation:
-  Enabled: false
-
-Style/EmptyMethod:
-  Description: >
-    Expanded format is easier to read and allows for better incremental commits
-    in TDD
-  Enabled: true
-  EnforcedStyle: expanded
-
-Style/TrailingCommaInArrayLiteral:
-  EnforcedStyleForMultiline: consistent_comma
-
-Style/TrailingCommaInHashLiteral:
-  EnforcedStyleForMultiline: consistent_comma
-
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: consistent_comma
+    - tmp/**/*
