[TDD] create save team controller happy path

--- a/.rubocop_local.yml
+++ b/.rubocop_local.yml
@@ -12,6 +12,9 @@ Style/TrailingCommaInArrayLiteral:
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
 
+Rails/I18nLocaleTexts:
+  Enabled: false
+
 RSpec/Capybara/FeatureMethods:
   EnabledMethods:
     - feature
