--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.3.4",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "msw": "^1.1.0"
   }
 }
